Fix to stylesheet so that button icons appear in FF 7 Updates to setup guide and intellij settings jar

--- a/expressui-core/src/main/resources/VAADIN/themes/expressUiTheme/styles.css
+++ b/expressui-core/src/main/resources/VAADIN/themes/expressUiTheme/styles.css
@@ -138,3 +138,9 @@
   .v-select-option.v-radiobutton {
     padding-right: 10px;
 }
+
+
+/* Fixes problem with Firefox 7 where icons don't show up in buttons */
+.v-ff7 .v-button-wrap {
+    overflow: visible;
+}
