Added Dashboard and Excel Export features

--- a/expressui-core/src/main/resources/com/expressui/core/view/AppWidgetSet.gwt.xml
+++ b/expressui-core/src/main/resources/com/expressui/core/view/AppWidgetSet.gwt.xml
@@ -48,4 +48,10 @@
 
     <inherits name="org.vaadin.risto.stepper.widgetset.StepperWidgetset"/>
 
+    <inherits name="org.vaadin.sasha.portallayout.PortallayoutWidgetset"/>
+
+    <inherits name="org.vaadin.vaadinvisualizations.widgetset.VaadinvisualizationApplicationWidgetset"/>
+
+    <inherits name="org.vaadin.vol.demo.VolExampleAppWidgetset"/>
+
 </module>
