--- a/sample/src/main/resources/VAADIN/themes/sample/styles.css
+++ b/sample/src/main/resources/VAADIN/themes/sample/styles.css
@@ -8,8 +8,17 @@
  * from Java class names.
 */
 
-.e-login-page .v-panel-caption {
+/* Style copied from chameleon blue to be consistent with ExpressUI framework style */
+.e-login-page .v-panel-caption, .v-app-loginpage .v-button-wrap {
+    font-family: Arial, Helvetica, "Lucida Grande", "Lucida Sans Unicode", Tahoma, Verdana, sans-serif;
     text-align: center;
+    background: url("img/grad-light-top.png") repeat-x scroll 0 0 #287ECE;
+    color: #F7F8F9;
+    text-shadow: 0 -1px 0 #2E5A84;
+    border: medium none;
+    display: block;
+    height: 100%;
+    padding: 4px 13px;
 }
 
 .v-app-loginpage .v-textfield {
